# hellocmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
geomlib/: CMakeLists.txt  geomlib.cpp  geomlib.h
mathlib/: CMakeLists.txt  math.cpp
stringlib/: CMakeLists.txt  stringlib.cpp  stringlib.h
tests/: CMakeLists.txt  tests.cpp
